feat: added request body info
